fix selection and some renaming
Signed-off-by: Stefan Schießl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1716,7 +1716,7 @@
             "warning": "Fill all blanks"
         },
         "add_opinion_modal": {
-            "title": "Add opinion",
+            "title": "Add Prediction Offer",
             "symbol": "Symbol",
             "condition": "Condition",
             "resolution": "Resolution",
