--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -725,7 +725,6 @@
         "settle_better_settleprice": "Settlement price is in favour",
         "settle_delay": "This asset will settle in %(hours)s hours",
         "settle_delay_globally_settled": "This asset will settle instantly",
-        "settle_market_predition": "Settling a prediction market asset is not possible",
         "settle_globally_settled": "Settle instantly",
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_offset": "Settlement price offset: %(offset)s%",
@@ -2121,6 +2120,7 @@
         "generate": "The generated password was created by your browser, locally. <br /><br /><strong>No one but you has access to it</strong>.<br /><br /> Paste it below and save a copy in a safe place",
         "global_settle": "This asset is globally settled. Settling it will let you convert your holdings of %(asset)s to %(backingAsset)s instantly, at the global settlement price (visible in exchange header or asset details page).",
         "global_settle_price": "This is the price at which settle orders will execute. This asset is globally settled, thus settlement orders will execute instantly",
+        "settle_market_prediction": "Settling a prediction market asset is only possible after its resolution.",
         "hide_asset": "Click here to hide this asset from this list.",
         "lack_funds": "There is not enough funds to perform the operation",
         "latest_price": "This is the latest price seen in this market.",
