#2870 Add inverted_price to locales

--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -611,6 +611,7 @@
         "panels_mirror": "Spiegel",
         "period": "Zeitspanne (Tage)",
         "price": "Preis",
+        "inverted_price": "Inverted Price",
         "price_alert": {
             "add_rule": "add rule",
             "alert_when": "Alert me when",
