--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -611,6 +611,7 @@
         "panels_mirror": "Mirror Panels",
         "period": "期間 (日)",
         "price": "価格",
+        "inverted_price": "Inverted Price",
         "price_alert": {
             "add_rule": "add rule",
             "alert_when": "Alert me when",
