--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -611,6 +611,7 @@
         "panels_mirror": "Mirror Panels",
         "period": "Süre (gün)",
         "price": "Fiyat",
+        "inverted_price": "Inverted Price",
         "price_alert": {
             "add_rule": "add rule",
             "alert_when": "Alert me when",
