--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -614,6 +614,7 @@
         "panels_mirror": "Mirror Panels",
         "period": "Time period (days)",
         "price": "Price",
+        "inverted_price": "Inverted Price",
         "price_alert": {
             "add_rule": "add rule",
             "alert_when": "Alert me when",
