--- a/app/assets/locales/locale-fr.json
+++ b/app/assets/locales/locale-fr.json
@@ -611,6 +611,7 @@
         "panels_mirror": "Mirror Panels",
         "period": "Time period (days)",
         "price": "Prix",
+        "inverted_price": "Inverted Price",
         "price_alert": {
             "add_rule": "add rule",
             "alert_when": "Alert me when",
