- cleanup header-selector - cleanup search input
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -452,6 +452,9 @@
     "assets": {
         "BTS": "BTS is the core token of the BitShares Blockchain"
     },
+    "errors": {
+        "loading_from_blockchain": "Error fetching form the blockchain, please retry."
+    },
     "boolean": {
         "false": "False",
         "true": "True"
