+ add support memoType "btsid" deposits + add support gateFee for Rudex + add depositConfirmationCount in DepositModalForm + change on "supportsMemos" for RuDex Withdraw

--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1107,6 +1107,12 @@
         "fiat_text": "Примечание: Фиатные шлюзы будут закрыты до дальнейшего уведомления. Приносим извинения за неудобства! Пожалуйста, следите за нашими последними новостями и обновлениями здесь <a target='_blank' rel='noopener noreferrer' href='https://blog.openledger.info/'> blog.openledger.info</a>",
         "frozen": "Аккаунт пользователя %(account)s был заморожен",
         "gateway": "Шлюз",
+        "gateway_deposit": {
+            "confirmations": {
+                "last_irreversible": "Средства будут зачислены на счет после того, как транзакция станет необратимой",
+                "n_blocks": "Средства будут зачислены на счет после %(blocks)s подтверждений сети"
+            }
+        },
         "gateway_text": "Здесь выберите, хотите ли вы разместить депозит или вывести средства",
         "generate": "Сгенерировать",
         "generate_new": "Получить новый адрес",
