add details section, buttons and subscribing

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -554,6 +554,7 @@
         "ema": "Exponential Moving Average",
         "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "Top Markets",
+        "fee": "Fee",
         "feed_price": "Feed Price",
         "filter": "Filter...",
         "flip": "Flip",
@@ -605,6 +606,7 @@
         "no_bids": "No bids",
         "no_data": "No data",
         "no_orders": "No orders",
+        "orders": "Orders",
         "order_book": "Order Book",
         "order_depth": "Market Depth",
         "order_grouping": "Order Grouping %(orderlimit)s%",
@@ -637,6 +639,18 @@
         "quick_deposit_gateway_button": "Use a Gateway",
         "quick_deposit_tooltip": "Deposit %(asset)s, click to open options",
         "quick_trade": "Quick trade",
+        "quick_trade_details": {
+            "your_price": "Your price",
+            "feed_price": "Feed price",
+            "last_price": "Last market price",
+            "liquidity_penalty": "Liquidity penalty",
+            "market_fee": "Market fee",
+            "transaction_fee": "Transaction fee",
+            "id": "Id",
+            "seller": "Seller",
+            "amount": "Amount",
+            "price": "Price"
+        },
         "quote": "Quote currency:",
         "quote_selection": "Modify quote selection",
         "quote_supply": "Quote supply",
