--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1721,12 +1721,19 @@
         "create_market_modal": {
             "title": "Create prediction market",
             "symbol": "Symbol",
+            "tooltip_symbol": "A prediction market asset has a symbol just like any other assets. Pick a symbol with 5 or more letters to minimize the creation fee.",
             "condition": "Condition",
+            "tooltip_condition": "The condition is a statement that can be resolved unambiguous to correct or incorrect at the resolution state.",
             "description": "Description",
+            "tooltip_description": "The description gives background information that help the user understand the significance of the prediction.",
             "resolution_date": "Resolution date",
+            "tooltip_resolution_date": "The point in time at which the prediction will be resolved. This needs to be done manually by you as the asset owner.",
             "backing_asset": "Backing asset",
+            "tooltip_backing_asset": "The backing asset will be used to pay the premium, i.e. it is the leverage that participants use.",
             "commission": "Commission",
-            "warning": "Fill all blanks"
+            "tooltip_commission": "Every participant pays the commission when opposing opinions on the prediction are being matched. On the blockchain, the commission is the market fee of this new asset.",
+            "warning": "Fill all blanks",
+            "select_date_and_time": "Select date and time"
         },
         "add_opinion_modal": {
             "title": "Add Prediction Offer",
