add a bit restyling add icon
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2091,7 +2091,7 @@
             }
         },
         "merchant_protocol": {
-            "description": "Discription...",
+            "description": "Create, view and pay remittance requests or invoices",
             "title": "Merchant Protocol"
         },
         "paper_wallet": {
