Changed components to style-guide ones

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -649,7 +649,8 @@
             "id": "Id",
             "seller": "Seller",
             "amount": "Amount",
-            "price": "Price"
+            "price": "Price",
+            "tooltip": "Enter at least three characters of an asset symbol to search"
         },
         "quote": "Quote currency:",
         "quote_selection": "Modify quote selection",
