real invoice data, and button label
Signed-off-by: Stefan Schießl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1384,6 +1384,7 @@
         "request": {
             "title": "Request",
             "submit": "Submit",
+            "create_invoice_string": "Create invoice string",
             "identifier": "Identifier",
             "identifier_tooltip": "The identifier needs to be used as the memo/message when the request is paid.",
             "items": "Items",
