Added comulative amount view

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -653,6 +653,7 @@
             "id": "Id",
             "seller": "Seller",
             "amount": "Amount",
+            "total": "Total",
             "price": "Price",
             "tooltip": "Enter at least three characters of an asset symbol to search"
         },
