--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -655,6 +655,8 @@
             "amount": "Amount",
             "total": "Total",
             "price": "Price",
+            "order": "Order",
+            "orders": "Orders",
             "tooltip": "Enter at least three characters of an asset symbol to search"
         },
         "quote": "Quote currency:",
