- fix placeholder for assetselect - add effective
Signed-off-by: Stefan Schießl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -644,6 +644,9 @@
         "quick_deposit_tooltip": "Deposit %(asset)s, click to open options",
         "quick_trade": "Quick trade",
         "quick_trade_details": {
+            "placeholder_sell": "Choose asset to sell",
+            "placeholder_receive": "Choose asset to receive",
+            "effective": "effective",
             "your_price": "Your price",
             "feed_price": "Feed price",
             "last_price": "Last market price",
