Added subscription & switch

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -660,7 +660,8 @@
             "price": "Price",
             "order": "Order",
             "orders": "Orders",
-            "tooltip": "Enter at least three characters of an asset symbol to search"
+            "tooltip": "Enter at least three characters of an asset symbol to search",
+            "subscribe_to_market": "Subscribe to market"
         },
         "quote": "Quote currency:",
         "quote_selection": "Modify quote selection",
